--- a/ECommerce/ECommerce.MVC/Areas/Admin/Views/Account/EditPassword.cshtml
+++ b/ECommerce/ECommerce.MVC/Areas/Admin/Views/Account/EditPassword.cshtml
@@ -4,6 +4,35 @@
     Layout = "Admin/_AdminLayout";
     ViewData["Title"] = "Parola Yenile";
 }
+@section Style {
+    <style>
+      /*------------------------------------------------------------------
+          17. Gallery Section   
+      -------------------------------------------------------------------*/
+      
+      .gallery_section_inner .column {
+          background: #fff;
+          box-shadow: 0 0 13px -10px #000;
+          overflow: hidden;
+      }
+      
+      .heading_section {
+          border-top: solid #1ed085 2px;
+          background: #15283c;
+      }
+      
+      .heading_section h4 {
+          color: #fff;
+          margin: 0;
+          font-weight: 200;
+          text-align: center;
+          padding: 16px 0 16px;
+          font-size: 15px;
+      }
+   </style>
+    <link href="~/lib/fancybox/css/jquery.fancybox.css" rel="stylesheet"/>
+}
+
 <div class="breadcrumbs">
         <div class="col-sm-4">
             <div class="page-header float-left">
@@ -32,39 +61,54 @@
                         </button>
                     </div>
                 </div>
-
-        <div class="container py-5">
-                <div class="card">
-                    <div class="card-header">
-                        <h2>Şifre Güncelle</h2>
-                        </div>
-                    <div class="card-body">
-                        <div class="card-title text-danger offset-sm-3"><u>@Model.UserName kullanıcının şifresini güncelliyorsunuz</u></div>
-                        <form asp-controller="Account" asp-action="EditPassword"  method="post">
-                            <div asp-validation-summary="All" class="text-danger ml-4"></div>
-                            <input type="hidden" asp-for="Id" class="form-control"/>
-                            <input type="hidden" asp-for="UserName" class="form-control"/>
-                            <div class="form-group row">
-                                <label asp-for="NewPassword" class="col-sm-3 col-form-label"></label>
-                                <div class="col-sm-9">
-                                    <input type="password" asp-for="NewPassword" class="form-control"/>
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <label asp-for="ReNewPassword" class="col-sm-3 col-form-label"></label>
-                                <div class="col-sm-9">
-                                    <input type="password" asp-for="ReNewPassword" class="form-control"/>
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <div class="offset-sm-3 col-sm-9">
-                                    <input type="submit" value="Güncelle" class="btn btn-info"/>
-                                </div>
-                            </div>
-                        </form>
+        <div class="container-fluid py-5" style="background-color: #eee;">
+                <div class="row">
+                    <div class="col-lg-4">
+                        <!-- User Card Summary-->
+                        @await Component.InvokeAsync("UserSummaryCard", new { userId = Model.Id })
+                        <!-- User Card Summary-->
+                        <!-- UserImage Card-->
+                        @await Component.InvokeAsync("UserImageCard", new { userId = Model.Id })
+                        <!-- UserImage Card-->
                     </div>
+                    <div class="col-lg-8">
+                        <div class="card">
+                            <div class="card-header">
+                               <h2>Şifre Güncelle</h2>
+                            </div>
+                            <div class="card-body">
+                                <div class="card-title text-danger offset-sm-3"><u>@Model.UserName kullanıcının şifresini güncelliyorsunuz</u></div>
+                                <form asp-controller="Account" asp-action="EditPassword"  method="post">
+                                    <div asp-validation-summary="All" class="text-danger ml-4"></div>
+                                    <input type="hidden" asp-for="Id" class="form-control"/>
+                                    <input type="hidden" asp-for="UserName" class="form-control"/>
+                                    <div class="form-group row">
+                                        <label asp-for="NewPassword" class="col-sm-3 col-form-label"></label>
+                                        <div class="col-sm-9">
+                                            <input type="password" asp-for="NewPassword" class="form-control"/>
+                                        </div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label asp-for="ReNewPassword" class="col-sm-3 col-form-label"></label>
+                                        <div class="col-sm-9">
+                                            <input type="password" asp-for="ReNewPassword" class="form-control"/>
+                                        </div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <div class="offset-sm-3 col-sm-9">
+                                            <input type="submit" value="Güncelle" class="btn btn-info"/>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
                     </div>
                 </div>
+            </div>
 
     </div> <!-- .content -->
+@section Scripts {
+    <script src="~/lib/fancybox/js/jquery.fancybox.min.js"></script>
+    <script src="~/admin/js/UserImage/userImage.js"></script>
+}
     
