--- a/ECommerce/ECommerce.MVC/Areas/Admin/Views/Account/EditProfile.cshtml
+++ b/ECommerce/ECommerce.MVC/Areas/Admin/Views/Account/EditProfile.cshtml
@@ -5,6 +5,35 @@
     ViewData["Title"] = "Profili Düzenle";
 }
 
+@section Style {
+    <style>
+      /*------------------------------------------------------------------
+          17. Gallery Section   
+      -------------------------------------------------------------------*/
+      
+      .gallery_section_inner .column {
+          background: #fff;
+          box-shadow: 0 0 13px -10px #000;
+          overflow: hidden;
+      }
+      
+      .heading_section {
+          border-top: solid #1ed085 2px;
+          background: #15283c;
+      }
+      
+      .heading_section h4 {
+          color: #fff;
+          margin: 0;
+          font-weight: 200;
+          text-align: center;
+          padding: 16px 0 16px;
+          font-size: 15px;
+      }
+   </style>
+    <link href="~/lib/fancybox/css/jquery.fancybox.css" rel="stylesheet"/>
+}
+
 <div class="breadcrumbs">
     <div class="col-sm-4">
         <div class="page-header float-left">
@@ -33,82 +62,94 @@
             </button>
         </div>
     </div>
-    <div class="container py-5">
-        <div class="card">
-            <div class="card-header">
-                <h2>Kullanıcı Güncelle</h2>
+    <div class="container-fluid py-5" style="background-color: #eee;">
+        <div class="row">
+            <div class="col-lg-4">
+                <!-- User Card Summary-->
+                @await Component.InvokeAsync("UserSummaryCard", new { userId = Model.Id })
+                <!-- User Card Summary-->
+                <!-- UserImage Card-->
+                @await Component.InvokeAsync("UserImageCard", new { userId = Model.Id })
+                <!-- UserImage Card-->
             </div>
-            <div class="card-body">
-                <form asp-controller="Account" asp-action="EditProfile" method="post">
-                    <div class="form-group row offset-2 col-10 text-danger" asp-validation-summary="All">
+            <div class="col-lg-8">
+                <div class="card">
+                    <div class="card-header">
+                        <h2>Kullanıcı Güncelle</h2>
                     </div>
-                    <input type="hidden" asp-for="Id" class="form-control"/>
-                    <div class="form-group row">
-                        <label asp-for="FirstName" class="col-sm-2 col-form-label"></label>
-                        <div class="col-sm-10">
-                            <input asp-for="FirstName" class="form-control"/>
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <label asp-for="LastName" class="col-sm-2 col-form-label"></label>
-                        <div class="col-sm-10">
-                            <input asp-for="LastName" class="form-control"/>
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <label asp-for="GenderType" class="col-sm-2 col-form-label"></label>
-                        <div class="col-sm-10">
-                            @foreach (var item in System.Enum.GetValues(typeof(GenderEnum)).OfType<GenderEnum>())
-                            {
-                                <label>
-                                    <input  type="radio" asp-for="GenderType" value="@Convert.ToInt32(item)" checked="@(item == Model?.GenderType)"/>
-                                    @item
-                                </label>
-                            }
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <label asp-for="UserName" class="col-sm-2 col-form-label"></label>
-                        <div class="col-sm-10">
-                            <input asp-for="UserName" class="form-control"/>
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <label asp-for="UserIdendityNo" class="col-sm-2 col-form-label"></label>
-                        <div class="col-sm-10">
-                            <input asp-for="UserIdendityNo" class="form-control"/>
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <label asp-for="PhoneNumber" class="col-sm-2 col-form-label"></label>
-                        <div class="col-sm-10">
-                            <input asp-for="PhoneNumber" id="userphonemasc" class="form-control"/>
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <label asp-for="Email" class="col-sm-2 col-form-label"></label>
-                        <div class="col-sm-10">
-                            <input type="email" asp-for="Email"  class="form-control"/>
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <label asp-for="DateOfBirth" class="col-sm-2 col-form-label"></label>
-                        <div class="col-sm-10">
-                            <input asp-for="DateOfBirth" class="form-control"/>
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <label asp-for="Note" class="col-sm-2 col-form-label"></label>
-                        <div class="col-sm-10">
-                            <textarea asp-for="Note" class="form-control"></textarea>
+                    <div class="card-body">
+                        <form asp-controller="Account" asp-action="EditProfile" method="post">
+                            <div class="form-group row offset-2 col-10 text-danger" asp-validation-summary="All">
                             </div>
-                        </div>
-                    <div class="form-group row">
-                        <div class="offset-sm-2 col-sm-10">
-                            <input type="submit" value="Kaydet" class="btn btn-info"/>
-                        </div>
+                            <input type="hidden" asp-for="Id" class="form-control"/>
+                            <div class="form-group row">
+                                <label asp-for="FirstName" class="col-sm-2 col-form-label"></label>
+                                <div class="col-sm-10">
+                                    <input asp-for="FirstName" class="form-control"/>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label asp-for="LastName" class="col-sm-2 col-form-label"></label>
+                                <div class="col-sm-10">
+                                    <input asp-for="LastName" class="form-control"/>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label asp-for="GenderType" class="col-sm-2 col-form-label"></label>
+                                <div class="col-sm-10">
+                                    @foreach (var item in System.Enum.GetValues(typeof(GenderEnum)).OfType<GenderEnum>())
+                                    {
+                                        <label>
+                                            <input type="radio" asp-for="GenderType" value="@Convert.ToInt32(item)" checked="@(item == Model?.GenderType)"/>
+                                            @item
+                                        </label>
+                                    }
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label asp-for="UserName" class="col-sm-2 col-form-label"></label>
+                                <div class="col-sm-10">
+                                    <input asp-for="UserName" class="form-control"/>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label asp-for="UserIdendityNo" class="col-sm-2 col-form-label"></label>
+                                <div class="col-sm-10">
+                                    <input asp-for="UserIdendityNo" class="form-control"/>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label asp-for="PhoneNumber" class="col-sm-2 col-form-label"></label>
+                                <div class="col-sm-10">
+                                    <input asp-for="PhoneNumber" id="userphonemasc" class="form-control"/>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label asp-for="Email" class="col-sm-2 col-form-label"></label>
+                                <div class="col-sm-10">
+                                    <input type="email" asp-for="Email" class="form-control"/>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label asp-for="DateOfBirth" class="col-sm-2 col-form-label"></label>
+                                <div class="col-sm-10">
+                                    <input asp-for="DateOfBirth" class="form-control"/>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label asp-for="Note" class="col-sm-2 col-form-label"></label>
+                                <div class="col-sm-10">
+                                    <textarea asp-for="Note" class="form-control"></textarea>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <div class="offset-sm-2 col-sm-10">
+                                    <input type="submit" value="Kaydet" class="btn btn-info"/>
+                                </div>
+                            </div>
+                        </form>
                     </div>
-                </form>
+                </div>
             </div>
         </div>
     </div>
@@ -116,10 +157,11 @@
 
 @section Scripts {
     <script src="~/js/inputmask/jquery.inputmask.min.js"></script>
+    <script src="~/lib/fancybox/js/jquery.fancybox.min.js"></script>
+    <script src="~/admin/js/UserImage/userImage.js"></script>
     <script type="text/javascript">
            (function($) {
                $("#userphonemasc").inputmask("+\\90(999)999-99-99");
                })(jQuery);
     </script>
 }
-
