--- a/ECommerce/ECommerce.MVC/Areas/Admin/Views/UserOperation/Index.cshtml
+++ b/ECommerce/ECommerce.MVC/Areas/Admin/Views/UserOperation/Index.cshtml
@@ -171,6 +171,7 @@
                     timer: 5000,
                     timerProgressBar: true,
                     didOpen: (toast) => {
+                        toast.addEventListener('click', Swal.close)
                         toast.addEventListener('mouseenter', Swal.stopTimer)
                         toast.addEventListener('mouseleave', Swal.resumeTimer)
                     }
@@ -191,6 +192,7 @@
                     timer: 5000,
                     timerProgressBar: true,
                     didOpen: (toast) => {
+                        toast.addEventListener('click', Swal.close)
                         toast.addEventListener('mouseenter', Swal.stopTimer)
                         toast.addEventListener('mouseleave', Swal.resumeTimer)
                     }
@@ -211,6 +213,7 @@
                     timer: 5000,
                     timerProgressBar: true,
                     didOpen: (toast) => {
+                        toast.addEventListener('click', Swal.close)
                         toast.addEventListener('mouseenter', Swal.stopTimer)
                         toast.addEventListener('mouseleave', Swal.resumeTimer)
                     }
